--- a/src/main/resources/static/views/business.html
+++ b/src/main/resources/static/views/business.html
@@ -17,7 +17,7 @@
   <h1>WellCome To Ashraf Pharmacy</h1> 
 	<p>Ashraf Pharmacy Moto</p>
 	<a href="/sales" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Sales Statics</a>
-	<a href="/expense" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Expense Statics<</a>
+	<a href="/expense" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Expense Statics</a>
 </div>
 </body>
 </html>
