--- a/src/main/resources/static/views/sales.html
+++ b/src/main/resources/static/views/sales.html
@@ -47,7 +47,7 @@ li:hover {
 						<b>Search:</b>
 					</p>
 					<button type="button" id="companyBtn" name="medicineBtn"
-					class="btn btn-success"  ng-click="onClickCompanyBtnSubmit()">Save</button>
+					class="btn btn-success"  ng-click="onClickCompanyBtnSubmit()">Search</button>
 				</div>			
 
 			</div>
