feat: Expense Service ,Business Service | Add: Modified

--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -299,7 +299,7 @@
 		  <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="expenseDate">Date:</label>
 		    <div class="col-sm-10"> 
-		      <input type="date" class="form-control" id="expenseDate" ng-model="expenseDate">
+		      <input type="datetime-local" class="form-control" id="expenseDate" ng-model="expenseDate">
 		    </div>
 		  </div>
 		</form>
