--- a/src/main/resources/static/views/Expense.html
+++ b/src/main/resources/static/views/Expense.html
@@ -26,13 +26,13 @@ li:hover {
 	<div ng-app="myapp" ng-controller="usercontroller">
 		<!-- ---------------- -->
 		<div class="container-fluid">
-		<!-- 	<h1>ASHRAB PHARMACY</h1>
-			<p>Ashrab Pharmacy Moto</p> -->
+			<h1>ASHRAB PHARMACY</h1>
+			<p>Ashrab Pharmacy Moto</p> 
 			<div class="form-row">
 				<div class="form-group col-md-2">
 					<p>
-						<b>Date (From):</b>
-					</p>
+
+						<b>Date (From):</b					</p>
 					<input type="date" name="bdaytime"  ng-model="date_from">
 				</div>
 				<div class="form-group col-md-2">
@@ -55,7 +55,7 @@ li:hover {
 
 
 
-<!-- --------Medicine List--------- -->
+<!-- --------Expense List--------- -->
 			<div>
 				<table class="table table-hover">
 					<thead>
@@ -71,7 +71,10 @@ li:hover {
 							<th scope="row">{{ $index+1	}}</th>
 							<td>{{expenseSatic.date | date:'dd-MMM-yyyy'}}</td>
 							<td> {{expenseSatic.totalExpenseAmount}} </td>
-						<!-- 	<td>{{expenseSatic.totalDueValue}}</td> -->
+						 	<td>
+								<button type="button" id="companyBtn" name="medicineBtn"
+								class="btn btn-success"  ng-click="onClickExpenseDetailBtnSubmit(expenseSatic.date)">Details</button>
+							</td>
 						</tr>
 						<tr>
 							<th scope="col"></th>
@@ -88,6 +91,58 @@ li:hover {
 		
 
 		
+<!-- Modal -->
+<div class="modal fade" id="salesPersonModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel" >Expense Detail:{{ detailId }}</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      	<table  class="table table-hover">
+			<thead>
+				<tr>
+					<th >DateTime</th>
+					<th >Company</th>
+					<th >Recive Person</th>
+					<th >Expense Detail</th>
+					<th >Amount</th>
+					<th >Ref Id</th>
+					</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="expense in expenseList" finalOrder>
+					<th scope="row">{{ expense.expenseDate | date:'dd-MMM-yyyy HH:mm'}}</th>
+					<td>{{expense.expenseFor}}</td>
+					<td>{{expense.recivePerson}}</td>
+					<td>{{expense.expenseDetail}}</td>
+					<td>{{expense.expenseAmount}} </td>
+					<td>{{ expense.expenseRefInfo }}</td>
+				</tr>
+				<tr>
+					<th scope="col"></th>
+					<th scope="col"></th>
+					<th scope="col"></th>
+					<th scope="col"></th>
+					<th scope="col"></th>
+					<th scope="col"></th>
+				</tr>
+			</tbody>
+		</table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 	</div>
 </body>
 </html>
@@ -98,7 +153,7 @@ li:hover {
 
 	if($scope.date_from && $scope.date_to){
 	var date_from =$scope.date_from.getFullYear()+"-"+($scope.date_from.getMonth()+1)+"-"+$scope.date_from.getDate()+" "+"00:00:00"; 
-	var date_to =$scope.date_to.getFullYear()+"-"+($scope.date_to.getMonth()+1)+"-"+$scope.date_to.getDate()+" "+"00:00:00"; 
+	var date_to =$scope.date_to.getFullYear()+"-"+($scope.date_to.getMonth()+1)+"-"+$scope.date_to.getDate()+" "+"23:59:59"; 
 		$http({
 			method : "GET",
 			url : "/expense/date"+"?"+"from="+date_from+"&to="+date_to
@@ -112,7 +167,27 @@ li:hover {
 
 	  }; 
 		
-
+	$scope.onClickExpenseDetailBtnSubmit=function(detailId){
+	if(detailId){
+		detailId=new Date(detailId);
+	var date_from =detailId.getFullYear()+"-"+(detailId.getMonth()+1)+"-"+detailId.getDate()+" "+"00:00:00"; 
+	var date_to =detailId.getFullYear()+"-"+(detailId.getMonth()+1)+"-"+detailId.getDate()+" "+"23:59:59"; 
+		$http({
+			method : "GET",
+			url : "/expense/date/all"+"?"+"from="+date_from+"&to="+date_to
+			}).then(function mySuccess(response) {
+				$("#salesPersonModal").modal("show");
+				$scope.expenseList = response.data;
+			}, function myError(response) {
+				alert("Search Failed");
+				expenseList=[];
+			$scope.myWelcome = response.statusText;
+			});
+		}
+	  }; 
 		
 	});
 </script>
+
+
+
