--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -114,20 +114,27 @@ li:hover {
 
 		</div>
 		
-	<!-- __________________________________modal For Add Medicine______________________________ -->
+	<!-- __________________________________modal For Sale Submit______________________________ -->
 <!--   -->
 <!-- Modal -->
 <div class="modal fade" id="customerInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Sales Information</h3>
+        <h3 class="modal-title" id="exampleModalLabel">Sales Information ghfdgkfghk</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
+       		  <div class="form-check">
+			    <label >
+			    <input type="checkbox" class="form-check-input" id="cashBackCheck" ng-model="cashBack">
+			    Add To CashBack Policy. 
+			</label>
+			  </div>
+
   			<div class="form-group">
 		    <label class="control-label col-sm-2" for="medicineName">Customer Name:</label>
 		    <div class="col-sm-10">
