--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -2,17 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<script
-	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />  
-           <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script> 
+<title>Ashrab Pharmacy-Shop</title>
+<script src="/static/angular/angular.min.js"></script>
+<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+<script src="/static/bootstrap/js/jquery-3.4.1.min.js"></script>
+<script type='text/javascript' src='/static/bootstrap/js/bootstrap.min.js'></script>
+
 <style>
 li {
 	cursor: pointer;
@@ -27,8 +22,8 @@ li:hover {
 	<div ng-app="myapp" ng-controller="usercontroller">
 		<!-- ---------------- -->
 		<div class="container-fluid">
-<!-- 			<h1>ASHRAB PHARMACY</h1>
-			<p>ashrab Pharmacy Moto</p> -->
+ 			<h1>ASHRAB PHARMACY</h1>
+			<p>ashrab Pharmacy Moto</p>
 			<div class="form-row">
 				<div class="form-group col-md-2">
 					<p>
