--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ashrab Pharmacy</title>
+<title>Ashrab Pharmacy-Index</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- -BackGround Part -->
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/static/angular/angular.min.js"></script>
+<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+<script src="/static/bootstrap/js/jquery-3.4.1.min.js"></script>
+<script type='text/javascript' src='/static/bootstrap/js/bootstrap.min.js'></script>
+
 <link href="/views/css/background.css" rel="stylesheet">
 <script src="/views/js/background.js"></script>
 <!-- -BackGround Part -->
