--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -129,6 +129,12 @@ li:hover {
 			    	Add To CashBack Policy. 
 				</label>
 			  </div>
+			  <div class="form-check" ng-hide="hideCashBackUse" ng-show="hideCashBackUse">
+			    <label>
+			    	<input type="checkbox" class="form-check-input" id="cashBackUse" ng-model="cashBackUse" ng-change="cashBackCheckUse()" ng-true-value='true'ng-false-value='false'>
+			    	Use Available CashBack. 
+				</label>
+			  </div>
   			<div class="form-group" ng-hide="hideUserName">
 		    <label class="control-label col-sm-2" for="medicineName">User Name:</label>
 		    <div class="col-sm-10">
@@ -183,6 +189,15 @@ li:hover {
 		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="customerPaying">
 		    </div>
 		  </div>
+
+		   
+		 	<div class="form-group">
+		    <label class="control-label col-sm-2" for="genericsName">password:</label>
+		    <div class="col-sm-10">
+		      <input type="password" class="form-control" id="customerPass" placeholder="Enter Password"  ng-model="customerPass">
+		    </div>
+		  </div>
+
 		</form>
       </div>
       <div class="modal-footer">
@@ -350,6 +365,7 @@ li:hover {
     		$scope.hideCashbackAmount=false;
     		$scope.hideUserName=false;
     		$scope.userNameSugList = false;
+    		$scope.hideCashBackUse=true;
     		$scope.customerName='';
     	 	$scope.customerContactNo='';
 			$scope.cashbackAmount=$scope.totalAmount-$scope.medicinePriceWithComision;
@@ -360,6 +376,7 @@ li:hover {
     		$scope.hideCustomerContact=false;
     		$scope.hideCashbackAmount=true;
     		$scope.hideUserName=true;
+    		$scope.hideCashBackUse=false;
 			$scope.cashbackAmount='';
 			$scope.UserName='';
 			$scope.customerPaying=$scope.medicinePriceWithComision;
