--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -61,6 +61,7 @@ li a:hover {
 	    <li><a href="/userSearch" type="button"id="customerSearchBtn"name="customerSearchBtn" >Customer Search</a></li>
 	    <li><a href="/shop" type="button" id="companyBtn"name="medicineBtn" >Enter Into Shop</a></li>
 	    <li><a href="/business" type="button" id="companyBtn"name="medicineBtn" >Business Analysis</a></li>
+		<li><a href="/payDue" type="button" id="duePayBtn"name="medicineBtn" >Pay Due</a></li>
 	</ul>
 	</div>
 
