--- a/src/main/resources/static/views/success.html
+++ b/src/main/resources/static/views/success.html
@@ -10,6 +10,7 @@
     <title>Ashrab Pharmacy</title>
 </head>
 <body>
-<h2>OK</h2>
+<h2>Operation Successful</h2>
+<a href="/home" type="button" id="duePayBtn"name="medicineBtn" >Back To Home</a>
 </body>
 </html>
