--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -143,7 +143,7 @@ li:hover {
 					<ul class="list-group" ng-model="userNameSugList" ng-hide="hideUserNameSugList">
 						<li class="list-group-item"
 							ng-repeat=" user in userList"
-							ng-click="fillUserNamebox(user)">{{user.userName}}</li>
+							ng-click="fillUserNamebox(user)">{{user.userName}}({{ user.contact}})</li>
 					</ul>
 				</div>
 		  </div>
